# bandcamp-collection-downloader

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod
src/: BUILD.bazel
src/main/kotlin/bandcampcollectiondownloader/cli/: Command.kt  ExceptionHandlers.kt
src/main/kotlin/bandcampcollectiondownloader/core/: BandCampDownloaderError.kt  BandcampAPIConnector.kt  BandcampCollectionDownloader.kt  Constants.kt  CookiesManagement.kt
src/main/kotlin/bandcampcollectiondownloader/main/: Main.kt
src/main/kotlin/bandcampcollectiondownloader/util/: DryIO.kt  IO.kt  Logger.kt  RealIO.kt  Util.kt
src/test/kotlin/bandcampcollectiondownloader/test/: BUILD.bazel  SystemTest.kt
tools/: BUILD.bazel
