load("@aspect_rules_lint//format:defs.bzl", "multi_formatter_binary")

package(default_visibility = ["//:__subpackages__"])

java_binary(
    name = "ktfmt",
    main_class = "com.facebook.ktfmt.cli.Main",
    runtime_deps = ["@ktfmt//jar"],
)

multi_formatter_binary(
    name = "format",
    kotlin = ":ktfmt",
    starlark = "@buildifier_prebuilt//:buildifier",
)
